# repl-it-sim-core

./: .eslintrc.json  .replit  AGENTS.md  AI_WORK_SUMMARY.md  AWS_DEPLOYMENT.md  Dockerfile  SCENARIO_LOGIC_DOCUMENTATION.md  bun.lockb  components.json  debug_scenario.js  ngrok.yml  pyproject.toml  replit.md  requirements.txt  sessions.json  template_keys.txt  test_advice_logic.py  test_custom_goals.py  test_feasibility_api.py  test_knowledge_base.py  test_phase4b.py  test_verify.py  update_transformers.py
api/: agent_service.py  prompts.py  scenario_patterns.json
api-nodejs/: .gitignore  Dockerfile  README.md  index.js  lambda.js  package.json
app-ui/: experiment_v2.patch  index.html  package-lock.json  vite.config.ts
attached_assets/: Pasted-Connecting-to-URL-violates-the-following-Content-Security-Policy-directive-connect-src-none--1763978497511_1763978497514.txt  Pasted-Scenario-specific-challenges-Scenario-specific-comments-For-education-and-training-the-salary-1763630438675_1763630438676.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1763487327918_1763487327918.txt  Pasted-he-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1763487584260_1763487584260.txt
docs/: dev_workflow.md.resolved.0  email_draft.md.resolved  email_draft.md.resolved.0  email_draft.md.resolved.1  implementation_plan.md  implementation_plan.md.resolved.1  implementation_plan.md.resolved.2  implementation_plan.md.resolved.3  implementation_plan.md.resolved.4  journey_design_review.md  (+45 more)
(+188 files in other folders)
