[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Financial simulation with AI agent backend"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0"
]
